# ur_softhand

./: README.md
src/my_robot_cell_control/config/: my_robot_calibration.yaml
src/my_robot_cell_control/launch/: start_robot.launch.py
src/my_robot_cell_control/urdf/: my_robot_cell_controlled.urdf.xacro
src/my_robot_cell_description/urdf/: my_robot_cell_macro.xacro
src/qbhand-ros/qb_hand_description/urdf/: qbhand.utils.xacro  qbhand2m.urdf.xacro
src/ur_softhand_control/: CMakeLists.txt  package.xml
src/ur_softhand_control/launch/: rsp.launch.py  start_robot.launch.py
src/ur_softhand_control/urdf/: my_robot_cell_controlled.urdf.xacro
src/ur_softhand_description/: CMakeLists.txt  package.xml
src/ur_softhand_description/launch/: view_robot.launch.py
src/ur_softhand_description/urdf/: my_robot_cell.urdf.xacro  my_robot_cell_macro.xacro
src/ur_softhand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur_softhand_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  my_robot_cell.ros2_control.xacro  my_robot_cell.srdf  my_robot_cell.urdf.xacro  ros2_controllers.yaml
src/ur_softhand_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  start.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur_softhand_moveit_config/scripts/: merge.py
